@@ -231,3 +231,4 @@ E2D7,extras-openmoji,climate-environment,nuclear worker man,"radiation, protecti
 E2D8,extras-openmoji,climate-environment,nuclear worker woman,"radiation, protection suit, ",Robin Kurz,2020-02-18
 E2D9,extras-openmoji,climate-environment,nuclear protection,"radiation, suit, gas mask, nbc suit, hazmat",Robin Kurz,2020-02-18
 E2DA,extras-openmoji,climate-environment,atom bomb,"nuclear, radioactive, nuke, WW2",Robin Kurz,2020-02-18
+E380,extras-openmoji,symbols,no handshaking,"hygiene, agreement, virus, meeting, spread, germs",Julian Grüneberg,2020-04-05
